# ESP-Object-Messaging

./: .gitignore  AdcHost.h  AvDeviceWsClientHost.h  CMakeLists.txt  GpioHost.h  Joystick3AxisData.h  Joystick3AxisHost.h  JoystickHost.h  LvglBinding.h  LvglHost.h  ObjMsg.cpp  ObjMsg.h  ObjMsgData.h  ObjMsgDataFactory.cpp  ObjMsgJoystickData.h  ObjMsgTransport.cpp  ObsWsClientHost.h  PcntHost.h  README.md  ServoHost.h  ViscaHost.h  WebsocketHost.cpp  WebsocketHost.h  WifiProvision.cpp  idf_component.yml  libvisca.c  libvisca.h  libvisca_esp32.c
doxydoc/: Doxyfile.doxy  DoxygenLayout.xml  doxygen.css
examples/: README.md
examples/Esp32IoAdapt/: CMakeLists.txt  sdkconfig.defaults
examples/Esp32IoAdapt/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/IoAdapt-Lvgl-Websock/: CMakeLists.txt  lvglMsg.bat
examples/IoAdapt-Lvgl-Websock/main/: LvglBinding.cpp  idf_component.yml  lv_conf.h  messaging.cpp
examples/IoAdapt-Websock/: CMakeLists.txt  sdkconfig.defaults
examples/IoAdapt-Websock/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/Trivial/: CMakeLists.txt
examples/Trivial/main/: idf_component.yml  main.cpp
tools/: ui_bind.py
